# SerialTools

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1774090967780-522b9f6315784.mjs
docs/: regression-checklist.md
no2/: package-lock.json  package.json
no2/src/: App.vue
no2/src-tauri/: Cargo.toml  tauri.conf.json
no2/src-tauri/src/: main.rs
scripts/: hardware_serial_smoke.ps1  zynq_autodetect_console.ps1  zynq_collect_sysinfo.ps1  zynq_collect_sysinfo.sh  zynq_console_capture.ps1  zynq_login_smoke.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  serial.rs  serial_enhanced.rs  waveform.rs
src/components/: ConnectionPanel.vue  ConnectionStatus.vue  CustomSelect.vue  EmptyState.vue  LogPanel.vue  LogPanelEnhanced.vue  QuickPanel.vue  SendPanel.vue  Sidebar.vue  StatusDot.vue  TabBar.vue  WaveformEmptyState.vue
src/components/transitions/: ListSlide.vue  Modal.vue  SlideFade.vue
src/directives/: ripple.ts
src/layouts/: AppLayout.vue
src/router/: index.ts
src/stores/: device.ts  log.ts  payload.ts  serialConnection.ts  tabs.ts  theme.ts
src/styles/: animations.css  design-system.css  responsive.css  theme.css  themes.css
src/utils/: mockSerialReplay.ts  shortcuts.ts  virtualList.ts  waveformRenderer.ts
src/views/: PayloadView.vue  SettingsView.vue  TerminalView.vue  WaveformView.vue
